# my-workplace-tui

./: .env.example  .gitignore  ASSUMPTIONS.md  CHANGELOG.md  LICENSE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
badges/: test-badge.json
doc_progetto/: my_work_tui_project_spec.md
docs/: ARCHITECTURE.md  REPORT_ATTIVITA.md
src/workspace_tui/: __init__.py  __main__.py  app.py
src/workspace_tui/auth/: jira_auth.py  oauth.py
src/workspace_tui/cache/: cache_manager.py
src/workspace_tui/config/: settings.py
src/workspace_tui/notifications/: notifier.py  poll_manager.py
src/workspace_tui/services/: base.py  calendar.py  chat.py  dashboard.py  drive.py  errors.py  gmail.py  jira.py  search.py
src/workspace_tui/ui/styles/: main.tcss
src/workspace_tui/ui/tabs/: calendar_tab.py  chat_tab.py  dashboard_tab.py  drive_tab.py  gmail_tab.py  jira_tab.py  search_tab.py
src/workspace_tui/ui/widgets/: compose_modal.py  email_list.py  email_preview.py  event_create_modal.py  issue_create_modal.py  issue_detail.py  issue_list.py  search_results.py  status_bar.py  worklog_modal.py  wrapping_footer.py
src/workspace_tui/utils/: date_utils.py  text_utils.py  url_utils.py
tests/: conftest.py
tests/unit/: test_base_service.py  test_cache_manager.py  test_date_utils.py  test_drive_sharing_filter.py  test_errors.py  test_jira_auth.py  test_notifier.py  test_oauth.py  test_poll_manager.py  test_settings.py  test_text_utils.py  test_url_utils.py
tests/unit/services/: test_calendar.py  test_chat.py  test_dashboard.py  test_drive.py  test_gmail.py  test_jira.py  test_search.py
